--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -6,19 +6,19 @@ rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["secrets", "configmaps"]
   verbs: ["get", "watch", "list", "update", "patch"]
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: mittwald:replicator
-roleRef:
-  kind: ClusterRole
-  name: mittwald:replicator
-  apiGroup: rbac.authorization.k8s.io
-subjects:
-  - kind: ServiceAccount
-    name: replicator
-    namespace: kube-system
+# ---
+# kind: ClusterRoleBinding
+# apiVersion: rbac.authorization.k8s.io/v1beta1
+# metadata:
+#   name: mittwald:replicator
+# roleRef:
+#   kind: ClusterRole
+#   name: mittwald:replicator
+#   apiGroup: rbac.authorization.k8s.io
+# subjects:
+#   - kind: ServiceAccount
+#     name: replicator
+#     namespace: kube-system
 ---
 kind: ServiceAccount
 apiVersion: v1
