--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -1,14 +1,27 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: mittwald:replicator
+  name: ibp:replicator
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["secrets", "configmaps"]
   verbs: ["get", "watch", "list", "update", "patch"]
 ---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: ibp:replicator
+roleRef:
+  kind: ClusterRole
+  name: ibp:replicator
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: ServiceAccount
+    name: replicator
+    namespace: ibp-cp
+---
 kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: replicator
-  namespace: kube-system
+  namespace: ibp-cp
