--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: ibp:replicator
+  name: replicator-role
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["secrets", "configmaps"]
@@ -10,18 +10,18 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: ibp:replicator
+  name: replicator-binding
 roleRef:
   kind: ClusterRole
-  name: ibp:replicator
+  name: replicator-role
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: replicator
-    namespace: ibp-cp
+    name: replicator-acccount
+    namespace: replicator
 ---
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: replicator
-  namespace: ibp-cp
+  name: replicator-account
+  namespace: replicator
