--- a/test/secret_source.yaml
+++ b/test/secret_source.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: source-secret
+  annotations:
+    replicator.v1.mittwald.de/replicate-allowed-namespaces: "my-ns-1,namespace-[0-9]*,default"
 data:
   value: SGFsbG8gV2VsdA==
