--- a/deploy/00-rbac.yaml
+++ b/deploy/00-rbac.yaml
@@ -1,23 +1,33 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: replicator
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: replicator-role
+  namespace: replicator
 rules:
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["secrets", "configmaps"]
+  resources: ["secrets"]
+  verbs: ["get", "watch", "list", "update", "patch"]
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["configmaps"]
   verbs: ["get", "watch", "list", "update", "patch"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: replicator-binding
+  namespace: replicator
 roleRef:
   kind: ClusterRole
   name: replicator-role
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: replicator-acccount
+    name: replicator-account
     namespace: replicator
 ---
 kind: ServiceAccount
